<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/unit"/>
    <EditText
        android:id="@+id/editTextFactor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/factor"/>
    <Spinner
        android:id="@+id/unit_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>
</LinearLayout>
